# optimized-b-tree

./: CMakeLists.txt  README.md  benchmark_app  benchmark_output.txt
benchmark/: benchmark.cpp
include/adaptive_btree/: adaptive_btree.hpp  common.hpp  config.hpp  fdl_layout.hpp  inner_node.hpp  leaf_node.hpp  node.hpp  sdl_layout.hpp  slotted_page.hpp
include/baseline_bplus_tree/: baseline_bplus_tree.hpp
src/: adaptive_btree.cpp  inner_node.cpp  leaf_node.cpp  node.cpp  slotted_page.cpp
